Fix router history for direct links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
 <head>
   <meta charset="UTF-8" />
 
+  <meta
+    name="description"
+    content="Traffic Signal Kit offers practical Vue.js tools for traffic signal analysis and visualization."
+  />
+  <meta
+    name="keywords"
+    content="traffic signal, traffic engineering, split calculator, traffic data, intersection simulator"
+  />
+  <link rel="canonical" href="https://trafficsignalkit.onrender.com/" />
+
+  <meta property="og:title" content="Traffic Signal Kit" />
+  <meta
+    property="og:description"
+    content="Explore helpful tools for traffic engineers including data visualizers and calculators."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://trafficsignalkit.onrender.com/" />
+  <meta
+    property="og:image"
+    content="/src/assets/covershots/trafficsignalkit.com-split-calculator.png"
+  />
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
