Add SEO metadata to document head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
+  <title>Traffic Signal Kit | Traffic Engineering Tools & Simulators</title>
+  <meta
+    name="description"
+    content="Traffic Signal Kit provides practical traffic engineering tools, split calculators, and intersection signal simulators for learning and planning."
+  />
+  <link rel="canonical" href="https://trafficsignalkit.com/" />
   <meta
     name="keywords"
     content="traffic signal, traffic engineering, split calculator, traffic data, intersection simulator"
